[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdb-price-predictor"
version = "0.1.0"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "joblib>=1.3.2",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0"
]
